--- a/css/style.css
+++ b/css/style.css
@@ -162,5 +162,19 @@ img {
     .steps .col{
         width:auto;
     }
+    .why-us .container{
+        width: auto;
+    margin: 0 auto;
+    padding: 0 20px;
+
+    }
+    .why-us .col-right{
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+    .why-us .col-left {
+    width: 100%;
+    margin-bottom: 2rem;
+    
 
 }
